# adam-gateway

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/adam_gateway/: __init__.py  cli.py  config.py  main.py
src/adam_gateway/adapter/: __init__.py
src/adam_gateway/middleware/: __init__.py
src/adam_gateway/provider/: __init__.py
src/adam_gateway/service/: __init__.py
tests/: __init__.py
